--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "date-fns": "^2.21.1",
     "firebase": "^8.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
