--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sweetalert2/theme-dark": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +12,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "chart.js": "^3.2.1",
     "chroma-js": "^2.1.1",
     "date-fns": "^2.21.1",
     "firebase": "^8.3.3",
@@ -18,6 +20,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.0.9",
+    "sweetalert2-react-content": "^4.0.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
