--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "chart.js": "^3.3.0",
     "chroma-js": "^2.1.1",
     "date-fns": "^2.21.1",
     "firebase": "^8.3.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
