--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-to-print": "^2.12.6",
+    "react-toastify": "^7.0.4",
     "sweetalert2": "^11.0.9",
     "sweetalert2-react-content": "^4.0.1",
     "typescript": "^4.2.4",
