--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^8.3.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
