--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-to-print": "^2.12.6",
     "react-toastify": "^7.0.4",
     "sweetalert2": "^11.0.9",
@@ -54,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/chroma-js": "^2.1.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17"
   }
 }
