--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "firebase": "^8.3.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-to-print": "^2.12.6",
+    "react-toastify": "^7.0.4",
     "sweetalert2": "^11.0.9",
     "sweetalert2-react-content": "^4.0.1",
     "typescript": "^4.2.4",
@@ -51,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/chroma-js": "^2.1.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17"
   }
 }
